[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Textures/Character/idle_Characters/idle_sugarcane vendor.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/BoatGuy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/TravelOptions.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/InteractKey.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 17 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3.5, 4.5 )

[node name="BoatGuy" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="InteractKey" parent="." instance=ExtResource( 4 )]
position = Vector2( -1, -5 )
collision_layer = 56
text = "Talk"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
frames = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -4.5 )
shape = SubResource( 9 )

[node name="TravelOptions" parent="." instance=ExtResource( 3 )]
layer = 5

[node name="Option4" parent="TravelOptions/DialogueOptions" index="3"]
index = 3

[connection signal="area_entered" from="InteractKey" to="." method="_on_InteractKey_area_entered"]
[connection signal="area_exited" from="InteractKey" to="." method="_on_InteractKey_area_exited"]
[connection signal="pressed" from="TravelOptions/DialogueOptions/Option1/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TravelOptions/DialogueOptions/Option2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TravelOptions/DialogueOptions/Option3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TravelOptions/DialogueOptions/Option4/Button" to="." method="_on_Button_pressed"]

[editable path="InteractKey"]
[editable path="TravelOptions"]
